--- a/src/app/Components/Homepage/gestion-operativa/gestion-operativa.component.html
+++ b/src/app/Components/Homepage/gestion-operativa/gestion-operativa.component.html
@@ -39,7 +39,7 @@
             </div>
             <div class="card-content">
                 <h3>Semaforización</h3>
-                <p>Visualiza el estado de los equipos por colores.</p>
+                <p>Visualiza el estado de los equipos.</p>
                 <span class="card-action">Ingresar <i class="pi pi-arrow-right"></i></span>
             </div>
         </div>
@@ -51,7 +51,7 @@
             </div>
             <div class="card-content">
                 <h3>Indicadores</h3>
-                <p>Analiza métricas y KPIs de gestión.</p>
+                <p>Analiza métricas e indicadores de gestión.</p>
                 <span class="card-action">Ingresar <i class="pi pi-arrow-right"></i></span>
             </div>
         </div>
