--- a/src/app/Components/navbars/biomedicaadminnavbar/biomedicaadminnavbar.component.html
+++ b/src/app/Components/navbars/biomedicaadminnavbar/biomedicaadminnavbar.component.html
@@ -2,7 +2,7 @@
     <p-menubar [model]="items" styleClass="glass-navbar border-none">
         <ng-template pTemplate="start">
             <div class="logo-container flex align-items-center gap-2 px-2 cursor-pointer" routerLink="/adminbiomedica">
-                <img src="assets/img/logohusrt.png" height="40" alt="Logo" />
+                <img src="LogoAgora.png" height="40" alt="Logo" />
                 <div class="flex flex-column">
                     <span class="font-bold text-primary text-lg">Biomédica</span>
                     <span class="text-xs text-secondary">Administrador</span>
