--- a/src/app/Components/navbars/superadminnavbar/superadminnavbar.component.html
+++ b/src/app/Components/navbars/superadminnavbar/superadminnavbar.component.html
@@ -2,7 +2,7 @@
   <p-menubar [model]="items" styleClass="glass-navbar border-none border-round-xl">
     <ng-template pTemplate="start">
       <div class="logo-container flex align-items-center gap-2 px-2 cursor-pointer" routerLink="/superadmin">
-        <i class="pi pi-shield text-primary text-2xl"></i>
+        <img src="LogoAgora.png" height="40" alt="Logo" />
         <div class="flex flex-column">
           <span class="font-bold text-primary text-lg">AppHusrt</span>
           <span class="text-xs text-secondary">Super Admin</span>
