--- a/src/app/Components/userBiomedica/Reportes/crear-reporte/crear-reporte.component.html
+++ b/src/app/Components/userBiomedica/Reportes/crear-reporte/crear-reporte.component.html
@@ -75,7 +75,7 @@
 
         <div class="form-item">
           <label>Hora Total</label>
-          <input pInputText type="text" formControlName="horaTotal" />
+          <input pInputText type="text" formControlName="horaTotal" readonly />
         </div>
 
         <div class="form-item">
