--- a/src/app/Components/navbars/biomedicausernavbar/biomedicausernavbar.component.html
+++ b/src/app/Components/navbars/biomedicausernavbar/biomedicausernavbar.component.html
@@ -2,7 +2,7 @@
   <p-menubar [model]="items" styleClass="glass-navbar border-none border-round-xl">
     <ng-template #start>
       <div class="flex align-items-center gap-2 mr-4 logo-container">
-        <i class="pi pi-heart-fill text-primary text-2xl"></i>
+        <img src="LogoAgora.png" height="40" alt="Logo" />
         <a class="text-xl font-bold text-color no-underline" [routerLink]="[getHomeLink()]"
           style="cursor: pointer;">AppHusrt</a>
       </div>
@@ -10,8 +10,9 @@
 
     <ng-template #end>
       <div class="flex align-items-center gap-3 actions-container">
-        <p-avatar icon="pi pi-user" styleClass="bg-primary-50 text-primary cursor-pointer" shape="circle"
-          (click)="viewUser()" pTooltip="Perfil"></p-avatar>
+        <p-avatar *ngIf="userRole !== 'INVITADO'" icon="pi pi-user"
+          styleClass="bg-primary-50 text-primary cursor-pointer" shape="circle" (click)="viewUser()"
+          pTooltip="Perfil"></p-avatar>
         <p-button icon="pi pi-sign-out" [rounded]="true" [text]="true" severity="secondary"
           (onClick)="navigateToAbout()" pTooltip="Cerrar Sesión"></p-button>
       </div>
