--- a/src/app/Components/userBiomedica/home-invitado/home-invitado.component.html
+++ b/src/app/Components/userBiomedica/home-invitado/home-invitado.component.html
@@ -3,79 +3,21 @@
 
 <div style="margin-top: 5%; margin-bottom: 5%;">
     <h1 style="text-align: center;">BIENVENIDO INVITADO</h1>
-    <h6 style="text-align: center;">Busque equipos por servicio, tipos de equipo o comodatos.</h6>
+    <h6 style="text-align: center;">Visualizacion de equipos de un Servicio</h6>
 </div>
 
-<div class="busqueda-container">
-    <h3 class="busqueda-titulo">Búsqueda por serie</h3>
-
-    <p-select [options]="equipos" [(ngModel)]="selectedEquipo" optionLabel="serie" [filter]="true" filterBy="serie"
-        [showClear]="true" placeholder="Buscar por serie" class="busqueda-select">
-        <ng-template #selectedItem let-selectedOption>
-            <div class="select-item">
-                <div>{{ selectedOption.serie }}</div>
-            </div>
-        </ng-template>
-        <ng-template let-equipo #item>
-            <div class="select-item">
-                <div>{{ equipo.serie }}</div>
-            </div>
-        </ng-template>
-    </p-select>
-
-    <button type="button" class="busqueda-boton" (click)="buscarEquipo()">Buscar</button>
-</div>
-
-<div style="margin-top: 3%;">
-    <div class="grid-container">
-        <div class="grid-item">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title" style="text-align: center; margin-bottom: 1px;">TIPO DE EQUIPO</h5>
-                    <div style="text-align: center; margin-bottom: 30px;">
-                        <i class="bi bi-music-player-fill" style="font-size: 6rem; color: rgb(0, 0, 0);"></i>
-                    </div>
-                    <button type="button" class="btn btn-dark" (click)=showViewTiposEquipoBio()>VER TIPOS DE
-                        EQUIPO</button>
+<div style="margin-top: 3%; display: flex; justify-content: center;">
+    <div style="width: 300px;">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title" style="text-align: center; margin-bottom: 1px;">SEDES</h5>
+                <div style="text-align: center; margin-bottom: 30px;">
+                    <i class="bi bi-building" style="font-size: 6rem; color: rgb(0, 0, 0);"></i>
                 </div>
-            </div>
-        </div>
-
-        <div class="grid-item">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title" style="text-align: center; margin-bottom: 1px;">SERVICIO</h5>
-                    <div style="text-align: center; margin-bottom: 30px;">
-                        <i class="bi bi-bookmark-heart-fill" style="font-size: 6rem; color: rgb(0, 0, 0);"></i>
-                    </div>
-                    <button type="button" class="btn btn-dark" (click)=showViewServicios()>VER SERVICIOS</button>
-                </div>
-            </div>
-        </div>
-
-        <div class="grid-item">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title" style="text-align: center; margin-bottom: 1px;">COMODATOS</h5>
-                    <div style="text-align: center; margin-bottom: 30px;">
-                        <i class="bi bi-file-earmark-medical-fill" style="font-size: 6rem; color: rgb(0, 0, 0);"></i>
-                    </div>
-                    <button type="button" class="btn btn-dark" (click)=showViewEmpComodatos()>VER COMODATOS</button>
-                </div>
-            </div>
-        </div>
-
-        <div class="grid-item">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title" style="text-align: center; margin-bottom: 1px;">SEDE</h5>
-                    <div style="text-align: center; margin-bottom: 30px;">
-                        <i class="bi bi-building" style="font-size: 6rem; color: rgb(0, 0, 0);"></i>
-                    </div>
+                <div style="text-align: center;">
                     <button type="button" class="btn btn-dark" (click)=showViewSedes()>VER SEDES</button>
                 </div>
             </div>
         </div>
-
     </div>
 </div>
