--- a/src/app/Components/userBiomedica/vista-Equipos/lista-equipos/lista-equipos.component.html
+++ b/src/app/Components/userBiomedica/vista-Equipos/lista-equipos/lista-equipos.component.html
@@ -16,11 +16,11 @@
                     <button pButton label="Limpiar Filtros" class="p-button-outlined p-button-secondary p-button-sm"
                         icon="pi pi-filter-slash" (click)="dt2.clear()"></button>
 
-                    <span class="p-input-icon-left w-full sm:w-auto">
-                        <i class="pi pi-search"></i>
+                    <p-iconfield position="left" class="w-full sm:w-auto">
+                        <p-inputicon styleClass="pi pi-search" />
                         <input pInputText type="text" (input)="onGlobalFilter($event)" placeholder="Búsqueda General"
                             class="w-full sm:w-auto" />
-                    </span>
+                    </p-iconfield>
                 </div>
             </ng-template>
 
@@ -82,8 +82,8 @@
 
 </div>
 
-<p-dialog header="Editar Plan de Mantenimiento" [(visible)]="displayPlanDialog" [modal]="true" [style]="{width: '50vw'}"
-    [draggable]="false" [resizable]="false">
+<p-dialog header="Editar Plan de Mantenimiento" [(visible)]="displayPlanDialog" [modal]="true"
+    styleClass="standard-modal modal-md" [draggable]="false" [resizable]="false">
     <div class="p-fluid">
         <div class="field">
             <label for="periodicidad">Periodicidad (Meses)</label>
@@ -108,8 +108,8 @@
         </div>
     </div>
     <ng-template pTemplate="footer">
-        <p-button icon="pi pi-check" (click)="savePlan()" label="Guardar" styleClass="p-button-text"></p-button>
         <p-button icon="pi pi-times" (click)="displayPlanDialog=false" label="Cancelar"
-            styleClass="p-button-text"></p-button>
+            styleClass="p-button-text p-button-secondary"></p-button>
+        <p-button icon="pi pi-check" (click)="savePlan()" label="Guardar"></p-button>
     </ng-template>
 </p-dialog>
